src/assets/sass/pages/unlock.scss
.unlock-title {
  .i-icon {
    padding-left: 0.15rem;
  }
}

.unlock-page {
  width: 100%;
  max-width: toRem(366);
  .unlock {
    width: 100%;
    border: 1px solid #e6e8ec;
    box-shadow: 0px 6px 24px rgba(0, 0, 0, 0.06);
    border-radius: 12px;
  }
  .btn-unlock {
    color: $body-color;
    padding: 1.2rem;
    margin-bottom: 0.7rem;
    font-size: 1rem;
    border: 1px solid #e6e8ec !important;
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.04);
    border-radius: 8px;
    .arrow {
      width: 13.01px;
      height: 16px;
      color: #1392ff;
    }
  }
}

